update support for fast-vm-1.7 on Fedora 30,31,32

--- a/templates/fast-vm.conf.j2
+++ b/templates/fast-vm.conf.j2
@@ -6,3 +6,5 @@ THINPOOL_LV={{ fastvm_lv }}
 THINPOOL_SIZE={{ fastvm_lv_size }}
 FASTVM_GROUP={{ fastvm_group }}
 FASTVM_OWNER_ONLY_DELETE={{ fastvm_owner_only_delete }}
+FASTVM_APPLIANCE={{ fastvm_appliance }}
+FASTVM_KEYDIST_PASSWORD={{ fastvm_keydist_password }}
